#121 - Added support for "#-" operator to be able to use them in UPDATE statement operation (#123)
* #121 - Added delete operator

* #121 - Updated DefaultJsonUpdateStatementOperationSort type

* #121 - Added tests case [skip ci]

* #121 - Added tests case [skip ci]

* #121 - Added filtering implementation

* #121 - Added javadoc [skip ci]

* #121 - Added javadoc

* #121 - Added tests case

* #121 - Added tests case [skip ci]

* #121 - Added tests case and fixed javadoc

* #121 - Added entry to README.md file [skip ci]

* #121 - Added entry to README.md file [skip ci]

* #121 - Added test case[skip ci]

* #121 - Added implementation

* #121 - Added javadoc [skip ci]

* #121 - Added javadoc [skip ci]

* #121 - Added entry to README.md file

* #121 - Fixed javadoc